--- a/Pagination/Views/Home/UserListsP.cshtml
+++ b/Pagination/Views/Home/UserListsP.cshtml
@@ -35,11 +35,11 @@
                 color: white;
             }
 
-        .pagination {
+        /*  .pagination {
             display: inline-block;
-        }
+        }*/
 
-            .pagination a {
+        /*  .pagination a {
                 color: black;
                 float: left;
                 padding: 8px 16px;
@@ -47,85 +47,118 @@
                 transition: background-color .3s;
                 border: 1px solid #ddd;
                 margin: 0 4px;
-            }
+            }*/
 
-                .pagination a.active {
+        /*.pagination a.active {
                     background-color: #4CAF50;
                     color: white;
                     border: 1px solid #4CAF50;
-                }
+                }*/
     </style>
 </head>
 <body>
-<center>
-    <h2>User Lists</h2>
+    <center>
+        <h2>User Lists</h2>
 
-    <table class="table" id="users">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FullName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MobileNUmber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-
-        </tr>
-
-        @foreach (var item in Model)
-        {
+        <table class="table" id="users">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.MobileNUmber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.SN)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.UserName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.MobileNUmber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
 
             </tr>
-        }
 
-    </table>
-    <div class="pagination" style="margin-left: 400px">
-        <a  href="#">&laquo;</a>
-        <a value="1" href="#">1</a>
-        <a id ="aa" href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#">5</a>
-        <a href="#">6</a>
-        <a href="#">&raquo;</a>
-    </div>
-</center>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.SN)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MobileNUmber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+
+                </tr>
+            }
+
+        </table>
+   
+        <ul class="pagination ">
+            @{
+                double totalpages = ViewBag.TotalPages;
+
+                for (int i = 1; i <= totalpages; i++)
+                {
+                    if (i == ViewBag.CurrentPageIndex)
+                    {
+                        int prev = i - 1;
+                        // int previous = prev - 1;
+                        int next = i + 1;
+                        // int nexts = next + 1;
+                        //previous = (previous == 0) ? 1 : previous;
+
+                        if (i != 1)
+                        {
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("UserListsP","Home",new { page = 1 })" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+                            <li class="page-item ">
+                                <a class="page-link" href="@Url.Action("UserListsP","Home",new { page = prev })">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+                            <li>@Html.ActionLink(@prev.ToString(), "UserListsP", new { page = prev })</li>
+                        }
+
+                        <li class="active">@Html.ActionLink(@i.ToString(), "UserListsP", new { page = i })</li>
+
+                        if (i != ViewBag.TotalPages)
+                        {
+                            <li>@Html.ActionLink(@next.ToString(), "UserListsP", new { page = next })</li>
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("UserListsP","Home" ,new {page = next })">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+
+                            <li class="page-item">
+                                <a class="page-link" href="@Url.Action("UserListsP","Home" ,new {page = totalpages })" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        }
+                    }
+                }
+            }
+        </ul>
+    </center>
 </body>
 
 </html>
-<script>
-    $(document).ready(function () {
-        $("#aa").click(function () {
-            console.log('ss');
-            var val = $('#aa').text();
-            console.log(val);
-            $.ajax({
-                type: "GET",
-                url: '@Url.Action("UserListsP")',
-                data: {val : val},
-                success: function (data) {
-                    return data;
-                }
-            });
-        });
-    });
-
-</script>
